web: Fix <presentation-layer> scrollbar updating.

--- a/web/index.css
+++ b/web/index.css
@@ -14,6 +14,9 @@ body {
   height: 100%;
   margin: 0;
 }
+body.no-scroll {
+  overflow: hidden;
+}
 
 #container {
   min-height: 100%;
